# pgbase

./: .gitignore  CMakeLists.txt  lupdate_script.bat
js/: application.js  configuration.js  getopt.js  initialization.js  js.pro  main.js  qsmainwindow.js  saverestoreutils.js  sqlutils.js
js/forms/: mainform.js
js/forms/avtoschool/: cursant_statistics.js  fuel_rates.js  groups.js  masters.js  planning_groups.js  searchcursant.js  theor_waybills.js  waybills.js
js/template/: tableobjecttemplate.js
js/translations/: script_ru.ts
js/users/: manager.js  teacher.js
js/widgets/: calculator.js  formwidget.js
plugins/script/com/: __init__.js
plugins/script/com/asvil/: __init__.js
share/: logo.rc  pgBase.qrc
share/images/32x32/table/: table.xcf
src/: CMakeLists.txt
src/global/: pgutils.cpp  pgutils.h
src/kernel/delegates/: comboboxdelegate.cpp  comboboxdelegate.h  plaintexteditdelegate.cpp  plaintexteditdelegate.h  qtcheckboxdelegate.cpp  qtcheckboxdelegate.h  tabledelegate.cpp  tabledelegate.h  texteditdelegate.cpp  texteditdelegate.h
src/kernel/interfaces/: modelinterfaces.h
src/kernel/models/: pgquerymodel.cpp  pgquerymodel.h  pgtablemodel.cpp  pgtablemodel.h  standardtreemodel.cpp  standardtreemodel.h
src/kernel/models/filter/: filtermodel.cpp  filtermodel.h
src/kernel/models/filter/private/: filtermodel_p.h
src/kernel/models/private/: pgquerymodel_p.h  pgtablemodel_p.h
src/kernel/models/proxy/: sectionsproxymodel.cpp  sectionsproxymodel.h
src/kernel/models/proxy/private/: sectionsproxymodel_p.h
src/kernel/script/: globalscriptengine.cpp  globalscriptengine.h  importobjects.cpp  importobjects.h
src/kernel/views/: pgqueryview.cpp  pgqueryview.h  pgtableview.cpp  pgtableview.h  qtheaderview.cpp  qtheaderview.h  qtsqltableview.cpp  qtsqltableview.h
src/kernel/views/private/: pgqueryview_p.h  pgtableview_p.h  qtheaderview_p.h  qtsqltableview_p.h
src/kernel/widgets/searchwidget/: searchwidget.cpp  searchwidget.h  searchwidget.qrc  searchwidget.ui
src/main/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/main/managers/customactionsmanager/: customactionsmanager.cpp  customactionsmanager.h  customactionsmanagerhelper.cpp  customactionsmanagerhelper.h
src/main/managers/editactionsmanager/: editactionsmanager.cpp  editactionsmanager.h  editactionsmanagerhelper.cpp  editactionsmanagerhelper.h
src/main/managers/editactionsmanager/private/: editactionsmanager_p.h
src/main/managers/fileactionsmanager/: fileactionsmanager.cpp  fileactionsmanager.h  fileactionsmanager.qrc  fileactionsmanagerhelper.cpp  fileactionsmanagerhelper.h
src/main/managers/fileactionsmanager/private/: fileactionsmanager_p.h
src/main/managers/findactionsmanager/: findactionsmanager.cpp  findactionsmanager.h  findactionsmanagerhelper.cpp  findactionsmanagerhelper.h
src/main/managers/findactionsmanager/private/: findactionsmanager_p.h
src/main/managers/navigateactionsmanager/: navigateactionsmanager.cpp  navigateactionsmanager.h  navigateactionsmanagerhelper.cpp  navigateactionsmanagerhelper.h
src/main/managers/printactionsmanager/: printactionsmanager.cpp  printactionsmanager.h  printactionsmanagerhelper.cpp  printactionsmanagerhelper.h
src/main/private/: mainwindow_p.h
src/plugin/script/: plugin_build.txt.in  plugin_typesystem.xml.in
translations/: pgbase_ru.ts  russian.qph
